--- a/project/sound_store/static/package.json
+++ b/project/sound_store/static/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "audio-buffer-utils": "^5.1.1",
     "audiobuffer-to-wav": "^1.0.0",
+    "merge-audio-buffers": "^1.0.0",
     "observer": "https://github.com/kurzgame/Observer/tarball/master",
     "recorder-js": "^1.0.7",
     "semantic-ui": "^2.3.0"
